Se agregaron mensajes en botones principales

--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -3,4 +3,8 @@
     <string name="app_name">Timesheet</string>
     <string name="action_settings">Configuracion</string>
     <string name="action_logout">Cerrar Sesión</string>
+
+    <!-- home strings -->
+    <string name="action_today">Dia actual</string>
+    <string name="action_notification">Notificación</string>
 </resources>
