--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,40 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+    <!-- home strings -->
+    <string name="action_today">Today</string>
+    <string name="action_notification">Notification</string>
+
+    <!-- menu general -->
     <string name="app_name">Timesheet</string>
     <string name="action_settings">Setting</string>
     <string name="action_logout">Logout</string>
+
+    <!-- array dayli activity -->
+    <string-array name="activity_type_array">
+        <item>@string/office_title</item>
+        <item>@string/training_title</item>
+        <item>@string/vacation_title</item>
+        <item>@string/engineering_title</item>
+        <item>@string/travel_title</item>
+        <item>@string/field_title</item>
+    </string-array>
+
+    <!-- Strings related to login -->
+    <string name="prompt_username">Username</string>
+    <string name="prompt_password">Password</string>
+    <string name="action_sign_in">Start Session</string>
+    <string name="action_sign_in_short">Sign in</string>
+
+    <string name="login_progress_signing_in">login_progress_signing_in</string>
+    <string name="error_invalid_email">This email address is invalid</string>
+    <string name="error_invalid_password">This password is too short</string>
+    <string name="error_incorrect_password">This password is incorrect</string>
+    <string name="error_field_required">This field is required</string>
+
+    <!-- tests strigns-->
+    <string name="messajer_test">mensaje de prueba</string>
+    <string name="messaje_test2">Hola mundo</string>
+    <string name="btn_ok">Ok</string>
+    <string name="btn_cancel">Cancel</string>
+
 </resources>
